62) kernel: net: l2tp: fix the connect status check in pppol2tp_getname.<br>
63) kernel: net: l2tp: correctly return -EBADF from pppol2tp_getname.<br>
64) kernel: net: l2tp: refactor the codes with existing macros instead of literal number.<br>
65) kernel: net: packet: improve socket create/bind latency in some cases.<br>
66) kernel: net: packet: race condition in packet_bind.<br>
67) kernel: net: ipv6: don't call fib6_run_gc() until routing is ready.<br>
68) kernel: net: ipv6: update ip6_rt_last_gc every time GC is run.<br>
69) kernel: net: tcp: make challenge acks less predictable (CVE-2016-5696).<br>
70) kernel: net: tcp: md5: fix lockdep annotation.<br>
71) kernel: net: tcp: consider recv buf for the initial window scale.<br>
72) kernel: net: tcp: fix use after free in tcp_xmit_retransmit_queue().<br>
73) kernel: net: netfilter: replace strnicmp with strncasecmp.<br>
74) kernel: net: netfilter: avoid race with exp->master ct.<br>
75) kernel: net: netfilter: conntrack: only need first 4 bytes to get l4proto ports.<br>
76) kernel: net: netfilter: conntrack: don't attempt to iterate over empty table.<br>
77) kernel: net: netfilter: nf_conntrack_sip: CSeq 0 is a valid CSeq.<br>
78) kernel: net: netfilter: xt_mark, xt_connmark: do not skip HW_NAT on RA_HW_NAT_QDMA enabled.<br>
79) kernel: net: netfilter: nf_ct_h323: do not re-activate already expired timer.<br>
80) kernel: net: netfilter: ctnetlink: reject new conntrack request with different l4proto.<br>
81) kernel: net: netfilter: gre: Use consistent GRE_* macros instead of ones defined by netfilter.<br>
82) kernel: net: netfilter: gre: Use consistent GRE and PTTP header structure instead of the ones defined by netfilter.<br>
83) kernel: net: netfilter: ftp: Remove the useless dlen==0 condition check in find_pattern.<br>
84) kernel: net: netfilter: ftp: Remove the useless code.<br>
85) kernel: net: netfilter: nf_ct_sip: correct parsing of continuation lines in SIP headers.<br>
<br>
<br>
<br>