@@ -2372,6 +2372,7 @@
 83) kernel: net: netfilter: ftp: Remove the useless dlen==0 condition check in find_pattern.<br>
 84) kernel: net: netfilter: ftp: Remove the useless code.<br>
 85) kernel: net: netfilter: nf_ct_sip: correct parsing of continuation lines in SIP headers.<br>
+86) kernel: net: netfilter: nf_ct_sip: correct allowed characters in Call-ID SIP header.<br>
 <br>
 <br>
 <br>
